error.txt
C:\Users\thene\Docs\Sketch\04092024_timer_buttons_ph_working\phmeter.cpp: In member function 'void PHMeter::checkCalibration()':
C:\Users\thene\Docs\Sketch\04092024_timer_buttons_ph_working\phmeter.cpp:82:26: error: qualified-id in declaration before '(' token
 void PHMeter::calibratePH() {
                          ^
C:\Users\thene\Docs\Sketch\04092024_timer_buttons_ph_working\phmeter.cpp:87:30: error: qualified-id in declaration before '(' token
 void PHMeter::saveCalibration() {
                              ^
C:\Users\thene\Docs\Sketch\04092024_timer_buttons_ph_working\phmeter.cpp:106:30: error: qualified-id in declaration before '(' token
 void PHMeter::loadCalibration(const char *slopeFile, const char *interceptFile) {
                              ^
C:\Users\thene\Docs\Sketch\04092024_timer_buttons_ph_working\phmeter.cpp:132:31: error: qualified-id in declaration before '(' token
 float PHMeter::loadAndValidate(const char *filename, float minVal, float maxVal, float defaultValue) {
                               ^

exit status 1

Compilation error: qualified-id in declaration before '(' token
